--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ button.active{
 div#card{
   background-color: white;
   border: solid 1px #d8d8d8;
-  border-radius: .5em;
+  border-radius: 1em;
   overflow: hidden;
 }
 
@@ -115,7 +115,7 @@ div#card >div{
 }
 
 .slider-container{
-  @apply w-[418px] h-[286px] flex justify-center relative rounded-xl overflow-hidden
+  @apply min-w-[418px] h-[286px] flex justify-center relative rounded-xl overflow-hidden
 }
 button:hover {
 }
